[gd_scene load_steps=16 format=2]

[ext_resource path="res://levels/selectGame/multiSelectMenu.gd" type="Script" id=1]
[ext_resource path="res://levels/commons/assets/fondmain.png" type="Texture" id=2]
[ext_resource path="res://levels/commons/assets/mainTitle.png" type="Texture" id=3]
[ext_resource path="res://levels/commons/assets/backbutton.png" type="Texture" id=4]
[ext_resource path="res://levels/commons/assets/backbuttonhover.png" type="Texture" id=5]
[ext_resource path="res://levels/commons/themes/mainTitleTheme.tres" type="Theme" id=6]
[ext_resource path="res://levels/commons/assets/options.png" type="Texture" id=7]
[ext_resource path="res://levels/commons/assets/optionshover.png" type="Texture" id=8]
[ext_resource path="res://levels/selectGame/assets/2Button.png" type="Texture" id=9]
[ext_resource path="res://levels/commons/scripts/buttonHover.gd" type="Script" id=10]
[ext_resource path="res://levels/selectGame/assets/4Button.png" type="Texture" id=11]
[ext_resource path="res://levels/selectGame/assets/8Button.png" type="Texture" id=12]
[ext_resource path="res://levels/selectGame/assets/16Button.png" type="Texture" id=13]
[ext_resource path="res://levels/selectGame/assets/32Button.png" type="Texture" id=14]
[ext_resource path="res://levels/commons/anim/sceneFadeIn.tres" type="Animation" id=15]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 130
alignment = 1

[node name="header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
size_flags_horizontal = 11
custom_constants/separation = 0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/header"]
margin_right = 1024.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/header/Control"]
anchor_right = 1.0
margin_bottom = 120.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="headerContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/header/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/header/Control/headerContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 85.0
custom_constants/separation = 50

[node name="back" type="TextureButton" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 65.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 65 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Multiplayer Selection" type="Label" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 854.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
text = "Multiplayer Selection"
align = 1
valign = 1
uppercase = true

[node name="titleMargins" type="MarginContainer" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
visible = false
margin_left = 699.0
margin_right = 999.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 150
custom_constants/margin_left = 150

[node name="options" type="TextureButton" parent="MarginContainer/VBoxContainer/header/Control/headerContainer/HBoxContainer"]
margin_left = 904.0
margin_right = 984.0
margin_bottom = 65.0
rect_min_size = Vector2( 80, 65 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="multiContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="multiSelectV" type="VBoxContainer" parent="MarginContainer/VBoxContainer/multiContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 450.0
size_flags_horizontal = 3

[node name="top" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV"]
margin_right = 984.0
margin_bottom = 213.0
size_flags_vertical = 3
custom_constants/margin_bottom = 20

[node name="firstLignSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top"]
margin_right = 984.0
margin_bottom = 193.0
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Players2Zone" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection"]
margin_right = 308.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players2" type="TextureButton" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players2Zone"]
margin_right = 308.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 153.008, 98.2447 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players2Zone/Players2"]

[node name="Players4Zone" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection"]
margin_left = 338.0
margin_right = 646.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players4" type="TextureButton" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players4Zone"]
margin_right = 308.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 154.067, 103.785 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players4Zone/Players4"]

[node name="Players8Zone" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection"]
margin_left = 676.0
margin_right = 984.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players8" type="TextureButton" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players8Zone"]
margin_right = 308.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( 156.233, 97.1366 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/top/firstLignSelection/Players8Zone/Players8"]

[node name="bottom" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV"]
margin_top = 217.0
margin_right = 984.0
margin_bottom = 430.0
size_flags_vertical = 3

[node name="secondLignSelection" type="HBoxContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom"]
margin_right = 984.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="Players16Zone" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection"]
margin_right = 477.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players16" type="TextureButton" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection/Players16Zone"]
margin_right = 477.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 238.327, 106.175 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection/Players16Zone/Players16"]

[node name="Players33Zone" type="MarginContainer" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection"]
margin_left = 507.0
margin_right = 984.0
margin_bottom = 213.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players33" type="TextureButton" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection/Players33Zone"]
margin_right = 477.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 247.671, 113.932 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MarginContainer/VBoxContainer/multiContainer/multiSelectV/bottom/secondLignSelection/Players33Zone/Players33"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer"]
autoplay = "sceneFadeIn"
anims/sceneFadeIn = ExtResource( 15 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
